--- a/Github Amazon Web Scraper.ipynb
+++ b/Github Amazon Web Scraper.ipynb
@@ -104,7 +104,7 @@
    "id": "a2b98650",
    "metadata": {},
    "source": [
-    "Running scraper to open Amazon"
+    "Running scraper to open Amazon and selecting number of pages to scrape from"
    ]
   },
   {
